# twilight_imperium_battle_simulator

./: .gitignore  README.txt  setup.cfg
src/: gui.py  main.py  ship.py
src/gui/: gui.py
src/model/: simulate.py
