[metadata]
name = battel_simultor
version = 0.0.1
description = a package that simulate twilight imperial battles


[options]
package_dir=
    =src
packages=find:

python_requires = >=3.7
install_requires =
    streamlit

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    executable-name = main